# apollo_lite

./: CMakeLists.txt
modules/: CMakeLists.txt
modules/audio/: CMakeLists.txt  audio_component.h
modules/audio/common/: CMakeLists.txt  audio_info.h  message_process.h
modules/audio/inference/: CMakeLists.txt  direction_detection.cc  moving_detection.h
modules/audio/proto/: CMakeLists.txt  audio.proto  audio0.proto  audio_event.proto  perception_obstacle.proto  pose.proto
modules/audio/tools/: CMakeLists.txt  audio_offline_processing.cc
modules/common/: CMakeLists.txt
modules/common/adapters/: CMakeLists.txt  adapter_gflags.cc
modules/common/adapters/proto/: CMakeLists.txt
modules/common/configs/: CMakeLists.txt  vehicle_config_helper.h
modules/common/configs/proto/: CMakeLists.txt
modules/common/filters/: CMakeLists.txt
modules/common/kv_db/: CMakeLists.txt
modules/common/latency_recorder/: CMakeLists.txt
modules/common/math/: CMakeLists.txt  math_utils_test.cc  mpc_osqp.cc
modules/common/math/qp_solver/: CMakeLists.txt
modules/common/monitor_log/: CMakeLists.txt  monitor_log_buffer.h  monitor_logger.h  monitor_logger_test.cc
modules/common/proto/: CMakeLists.txt  drive_event.proto  latency_record.proto  localization.proto  monitor_log.proto  simple.proto  vehicle_config.proto  vehicle_state.proto
modules/common/status/: CMakeLists.txt
modules/common/util/: CMakeLists.txt  message_util_test.cc  util_test.cc
modules/common/vehicle_model/: CMakeLists.txt  vehicle_model.h  vehicle_model_test.cc
modules/common/vehicle_state/: CMakeLists.txt  vehicle_state_provider.cc  vehicle_state_provider.h
