project(common)

add_subdirectory(proto)
add_subdirectory(adapters)
add_subdirectory(configs)
add_subdirectory(filters)
add_subdirectory(kv_db)
add_subdirectory(latency_recorder)
add_subdirectory(math)
add_subdirectory(monitor_log)
add_subdirectory(status)
add_subdirectory(util)
add_subdirectory(vehicle_state)
add_subdirectory(vehicle_model)
